@@ -113,7 +113,13 @@ limitations under the License.
           </ul>
 
           <div id="core-selector">
-            <select data-placeholder="Core Selector"></select>
+            <div id="has-cores">
+              <select data-placeholder="Core Selector"></select>
+            </div>
+            <p id="has-no-cores"><a href="#/~cores">
+              No cores available
+              <span>Go and create one</span>
+            </a></p>
           </div>
           <div id="core-menu">
             <ul></ul>
