@@ -113,24 +113,25 @@ limitations under the License.
   display: none;
 }
 
-#content #dashboard #dataimport
+#content #dashboard #instance
 {
   float: right;
 }
 
+#content #dashboard #instance .dir_impl
+{
+  margin-top: 10px;
+}
 
 #content #dashboard #admin-extra
 {
-  float: right;
+  float: left;
 }
 
-#content #dashboard #system h2 { background-image: url( ../../img/ico/server.png ); }
-#content #dashboard #statistics h2 { background-image: url( ../../img/ico/chart.png ); }
-#content #dashboard #replication h2 { background-image: url( ../../img/ico/node.png ); }
-#content #dashboard #replication.master h2 { background-image: url( ../../img/ico/node-master.png ); }
-#content #dashboard #replication.slave h2 { background-image: url( ../../img/ico/node-slave.png ); }
-#content #dashboard #dataimport h2 { background-image: url( ../../img/ico/document-import.png ); }
-#content #dashboard #admin-extra h2 { background-image: url( ../../img/ico/plus-button.png ); }
+#content #dashboard #healthcheck
+{
+  float: right;
+}
 
 #content #dashboard #healthcheck .ico
 {
@@ -144,3 +145,11 @@ limitations under the License.
 {
   background-image: url( ../../img/ico/tick.png );
 }
+
+#content #dashboard #system h2 { background-image: url( ../../img/ico/server.png ); }
+#content #dashboard #statistics h2 { background-image: url( ../../img/ico/chart.png ); }
+#content #dashboard #replication h2 { background-image: url( ../../img/ico/node.png ); }
+#content #dashboard #replication.master h2 { background-image: url( ../../img/ico/node-master.png ); }
+#content #dashboard #replication.slave h2 { background-image: url( ../../img/ico/node-slave.png ); }
+#content #dashboard #instance h2 { background-image: url( ../../img/ico/server.png ); }
+#content #dashboard #admin-extra h2 { background-image: url( ../../img/ico/plus-button.png ); }
