@@ -21,7 +21,6 @@ sammy.get
   /^#\/(~java-properties)$/,
   function( context )
   {
-    var core_basepath = $( '[data-basepath]', app.menu_element ).attr( 'data-basepath' );
     var content_element = $( '#content' );
 
     content_element
@@ -30,7 +29,7 @@ sammy.get
     $.ajax
     (
       {
-        url : core_basepath + '/admin/properties?wt=json',
+        url : app.config.solr_path + '/admin/info/properties?wt=json',
         dataType : 'json',
         context : $( '#java-properties', content_element ),
         beforeSend : function( xhr, settings )
