@@ -14,7 +14,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<div id="cores" class="clearfix">
+<div id="cores" class="clearfix empty">
 
   <div id="ui-block">&nbsp;</div>
 
@@ -23,11 +23,11 @@ limitations under the License.
     <div id="actions" class="actions clearfix">
       
       <button id="add" class="action"><span>Add Core</span></button>
-      <button id="unload" class="warn"><span>Unload</span></button>
-      <button id="rename" class="action"><span>Rename</span></button>
-      <button id="swap" class="action"><span>Swap</span></button>
-      <button id="reload"><span>Reload</span></button>
-      <button id="optimize"><span>Optimize</span></button>
+      <button id="unload" class="warn requires-core"><span>Unload</span></button>
+      <button id="rename" class="action requires-core"><span>Rename</span></button>
+      <button id="swap" class="action requires-core"><span>Swap</span></button>
+      <button id="reload" class="requires-core"><span>Reload</span></button>
+      <button id="optimize" class="requires-core"><span>Optimize</span></button>
 
       <div class="action add" data-rel="add">
 
@@ -118,7 +118,7 @@ limitations under the License.
 
     </div>
 
-    <div id="data">
+    <div id="data" class="requires-core">
 
       <div class="block" id="core-data">
 
@@ -213,7 +213,7 @@ limitations under the License.
   
   </div>
 
-  <div id="navigation" class="clearfix">
+  <div id="navigation" class="requires-core clearfix">
   
   </div>
 
