@@ -60,18 +60,36 @@ limitations under the License.
       </div>
     </div>
 
-    <div class="block" id="admin-extra">
+    <div class="block fieldlist" id="instance">
 
-      <h2><span>Admin Extra</span></h2>
+      <h2><span>Instance</span></h2>
             
       <div class="message-container">
         <div class="message"></div>
       </div>
 
       <div class="content">
+                
+        <dl>
+                    
+          <dt class="dir_cwd"><abbr title="Current Working Directory">CWD</abbr>:</dt>
+            <dd class="dir_cwd value"></dd>
+
+          <dt class="dir_instance">Instance:</dt>
+            <dd class="dir_instance value"></dd>
+
+          <dt class="dir_data">Data:</dt>
+            <dd class="dir_data value"></dd>
+
+          <dt class="dir_index">Index:</dt>
+            <dd class="dir_index value"></dd>
+
+          <dt class="dir_impl">Impl:</dt>
+            <dd class="dir_impl value"></dd>
+                        
+        </dl>
 
       </div>
-        
     </div>
 
   </div>
@@ -136,19 +154,6 @@ limitations under the License.
             
       </div>
     </div>
-
-    <div class="block" id="dataimport">
-
-      <h2><span>Dataimport</span></h2>
-            
-      <div class="message-container">
-        <div class="message"></div>
-      </div>
-
-      <div class="content"></div>
-    </div>
-
-  </div>
   
     <div class="block fieldlist" id="healthcheck">
 
@@ -168,6 +173,23 @@ limitations under the License.
         </dl>
       </div>
 
+    </div>
+
+  </div>
+  <div class="clearfix">
+
+    <div class="block" id="admin-extra">
+
+      <h2><span>Admin Extra</span></h2>
+            
+      <div class="message-container">
+        <div class="message"></div>
+      </div>
+
+      <div class="content">
+
+      </div>
+        
     </div>
 
   </div>
